--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 	      	<button type="button" class="btn btn-primary" onclick="logInUser();">Log In</button>
 	      	<button type="button" class="btn btn-info" onclick="getInfo();">Display Info</button>
 
-			<h4>First Name</h4>
-			<p id="firstName"></p>
-			<h4>Last Name</h4>
-			<p id="lastName"></p>
-			<h4>Company</h4>
-			<p id="company"></p>
+			<h4>Name</h4>
+			<p id="name"></p>
 			<h4>Title</h4>
 			<p id="title"></p>
+			<h4>Company</h4>
+			<p id="company"></p>
 			<h4>Skills</h4>
 			<p id="skills"></p>
 			<h4>Location</h4>
