Adding support to get current company name and title from LinkedIn

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
 
 			<h4>Name</h4>
 			<p id="name"></p>
-			<h4>Title</h4>
-			<p id="title"></p>
-			<h4>Company</h4>
-			<p id="company"></p>
+			<h4>Position</h4>
+			<p id="position"></p>
 			<h4>Skills</h4>
 			<p id="skills"></p>
 			<h4>Location</h4>
