--- a/index.html
+++ b/index.html
@@ -17,19 +17,32 @@
 			<div class="page-header">
 	        	<h1>Virtual Business Cards</h1>
 	      	</div>
-	      	<button type="button" class="btn btn-primary" onclick="logInUser();">Log In</button>
-	      	<button type="button" class="btn btn-info" onclick="getInfo();">Display Info</button>
+	      	<div class="row">
+		      	<div class="col-sm-3">
+			      	<button type="button" class="btn btn-primary" onclick="logInUser();">Log In</button>
+			      	<button type="button" class="btn btn-info" onclick="getInfo();">Display Info</button>
+		      	</div>
+		      	<div class="col-sm-9">
+		      		<div class="row">
+			      		<div class="col-sm-6">
 
-			<h4>Name</h4>
-			<p id="name"></p>
-			<h4>Position</h4>
-			<p id="position"></p>
-			<h4>Skills</h4>
-			<p id="skills"></p>
-			<h4>Location</h4>
-			<p id="location"></p>
-			<h4>Image</h4>
-			<p id="image"></p>
+			      			<form role="form">
+						    	<div class="form-group">
+						      		<input type="text" class="form-control" id="name" placeholder="Name">
+						      		<input type="text" class="form-control" id="position" placeholder="Position">
+						      		<input type="text" class="form-control" id="location" placeholder="Location">
+						      		<input type="text" class="form-control" id="skills" placeholder="Skills">
+						      		<input type="text" class="form-control" id="profile" placeholder="LinkedIn">
+						      		<input type="text" class="form-control" id="email" placeholder="Email">
+						    	</div>
+						  	</form>
+				      	</div>
+				      	<div class="col-sm-6" style="text-align:right">
+				      		<p id="image"></p>
+				      	</div>
+		      		</div>
+		      	</div>
+		    </div>
 		</div>
 	</body>
 </html>
