Making it look like a business card

--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
 	        	<h1>Virtual Business Cards</h1>
 	      	</div>
 	      	<div class="row">
-		      	<div class="col-sm-7">
+		      	<div class="col-sm-5">
 			      	<button type="button" class="btn btn-primary" onclick="logInUser();">Log In</button>
 			      	<button type="button" class="btn btn-info" onclick="getInfo();">Display Info</button>
 			      	<button type="button" class="btn btn-success" onclick="generateCard();">Generate Card</button>
 			      	<div id="card" class="row">
 			      		<div class="col-sm-8">
-			      			<p id="cardName"></p>
+			      			<h4 id="cardName"></h4>
 			      			<p id="cardPosition"></p>
+			      			<br>
 			      			<p id="cardLocation"></p>
-			      			<p id="cardSkills"></p>
-			      			<p id="cardProfile"></p>
 			      			<p id="cardEmail"></p>
+			      			<p id="cardProfile"></p>
+			      			<p id="cardSkills"></p>
 			      		</div>
 			      		<div class="col-sm-4" style="text-align:right">
 			      			<p id="cardImage"></p>
 			      		</div>
 		    		</div>
 		      	</div>
-		      	<div class="col-sm-5">
+		      	<div class="col-sm-7">
 	      			<form role="form">
 				    	<div class="form-group">
 				      		<input type="text" class="form-control" id="name" placeholder="Name">
