--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			      	<div id="card" class="row">
 			      		<div class="col-sm-8">
 			      			<h4 id="cardName"></h4>
-			      			<p id="cardPosition"></p>
+			      			<h6 id="cardPosition"></h6>
 			      			<br>
 			      			<p id="cardLocation"></p>
 			      			<p id="cardEmail"></p>
@@ -36,7 +36,7 @@
 			      		<div class="col-sm-4" style="text-align:right">
 			      			<p id="cardImage"></p>
 			      		</div>
-		    		</div>
+			      	</div>
 		      	</div>
 		      	<div class="col-sm-7">
 	      			<form role="form">
