Adding pg, socket.io

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	    <script src="/socket.io/socket.io.js"></script>
+	    <script type="text/javascript">
+	    	// open a connection to the server:
+	    	var socket = io.connect();
+	    </script>
 	    <script src="app.js"></script>
 	    <script type="text/javascript" src="http://platform.linkedin.com/in.js">
 			api_key:    78y9xqwiwdbsbz
