Get information from database

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 			authorize:  false
 		</script>
 		<link rel="stylesheet" href="style.css">
+		<title>Virtual Business Cards</title>
 	</head>
 	<body>
 		<div class="container" id="container">
