--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
 			      			<p id="cardImage"></p>
 			      		</div>
 			      	</div>
+			      	<div id="link"></div>
 		      	</div>
 		      	<div class="col-sm-7">
 	      			<form role="form">
