changing to https

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 			var ws = new WebSocket(host);
 	    </script>
 	    <script src="app.js"></script>
-	    <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+	    <script type="text/javascript" src="https://platform.linkedin.com/in.js">
 			api_key:    78y9xqwiwdbsbz
 			onLoad:     frameworkLoaded
 			authorize:  false
